// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Textarea Mobile 1`] = `
<Textarea
  id="1"
  label="Can you provide more detail?"
  onChange={[Function]}
>
  <div
    className="text-label"
  >
    <label
      htmlFor="1"
    >
      Can you provide more detail?
    </label>
  </div>
  <textarea
    className="text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />
</Textarea>
`;

exports[`Storyshots Textarea With Label 1`] = `
<Textarea
  id="1"
  label="Can you provide more detail?"
  onChange={[Function]}
>
  <div
    className="text-label"
  >
    <label
      htmlFor="1"
    >
      Can you provide more detail?
    </label>
  </div>
  <textarea
    className="text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />
</Textarea>
`;

exports[`Storyshots Textarea Without Label 1`] = `
<Textarea
  id="1"
  label=""
  onChange={[Function]}
>
  <textarea
    className="text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />
</Textarea>
`;
